# scarlet

./: .gitignore  CMakeLists.txt  README.md  test_llvm.cpp
examples/: factorial.sc  fibonacci.sc  hello.sc
include/: AST.h  CodeGen.h  Common.h  Lexer.h  Parser.h  Semantic.h  Utils.h
src/: AST.cpp  CMakeLists.txt  CodeGen.cpp  Lexer.cpp  Parser.cpp  Semantic.cpp  Utils.cpp  main.cpp
